# bsdiff-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
bsdiff_bzip2.net/: Class1.cs  README.md  bsdiff.net.csproj  bsdiff.net.sln
src/: bsdiff.rs  diff.rs  lib.rs  patch.rs
test/: Program.cs  test.csproj
tests/: expected_diff  test.rs  test_1  test_2
wrapper/: Cargo.toml  README.md
wrapper/src/: bsdiff.rs  bspatch.rs  lib.rs
