[package]
name = "bsdiff"
version = "0.1.5"
authors = ["pieterjan.briers@gmail.com", "Kornel <kornel@geekhood.net>"]
description = "Rust port of the bsdiff binary diffing algorithm."
readme = "README.md"
keywords = ["bsdiff", "bspatch", "diff"]
license = "BSD-2-Clause"
homepage = "https://github.com/space-wizards/bsdiff-rs"
repository = "https://github.com/space-wizards/bsdiff-rs"
edition = "2018"
