[package]
name = "bsdiff"
version = "0.2.1"
authors = ["pieterjan.briers@gmail.com", "Kornel <kornel@geekhood.net>"]
description = "Rust port of the bsdiff binary diffing algorithm."
readme = "README.md"
categories = ["compression"]
keywords = ["bspatch", "patch", "diff", "delta", "binary"]
license = "BSD-2-Clause"
homepage = "https://lib.rs/bsdiff"
repository = "https://github.com/space-wizards/bsdiff-rs"
edition = "2021"
include = ["src/*.rs", "LICENSE", "README.md", "Cargo.toml"]
rust-version = "1.59"
